[tool.poetry]
name = "apex chat"
version = "0.1.0"
description = "Chat bot on apex FAQ using RAG model"
authors = ["Ravindra Gadde <gadde.ravindra@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python ="^3.10,<3.12"
langchain = "^0.0.330"
jupyterlab = "^4.0.8"
numpy = "1.25.2"
pandas = "2.0.3"
python-dotenv = "^1.0.0"
openapi ="0.28"
tiktoken = "^0.6.0"
pinecone-client = "^3.1.0"
beautifulsoup4 = "^4.9.3"
